# HEGWE

./: .gitignore  CMakeLists.txt  MtCiphertext.cpp  MtCiphertext.h  MtMatrix.cpp  MtMatrix.h  cuda_bridge.h  cudaroutines.cu  helper_image.h  helper_string.h  main.cpp
